finished inital setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,17 @@
     "baseUrl": ".",
     "paths": {
       "@screens/*": ["./app/screens/*"],
+      "@screens": ["./app/screens"],
       "@navigation/*": ["./app/navigation/*"],
       "@themes": ["./app/themes"],
       "@context/*": ["./app/context/*"],
       "@api/*": ["./app/api/*"],
       "@services/*": ["./app/services/*"],
       "@hooks/*": ["./app/hooks/*"],
+      "@components": ["./app/components"],
+      "@helper/*": ["./app/helper/*"],
+      "@utils/*": ["./app/utils/*"],
+      "@assets/*": ["./app/assets/*"],
     }
   }
 }
