--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@tanstack/react-query": "^5.37.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "expo": "~51.0.2",
